Add infrastructure to download tarballs
Instead of storing the various tarballs in the ONIE project modify the
build system to download (and cache) the tarballs at compile time.

A new directory is created under the build directory:

  build/download

The various components' tarballs are stored in build/download.

A top level "make clean" will *not* delete the contents of
build/download.  To also remove the download directory use
"make clean-all".

To download all the files and stop use "make download".

TO only delete the downloaded files use "make download-clean".

Two new helper scripts are also added:

- fetch-package -- if the local file does not exist, download it using
                   a list of base URLs

- extract-package -- untar the file in a specified location

Testing:

1. Rebuilt all supported platforms
2. Installed ONIE and exercised features

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -147,6 +147,7 @@ endif
 
 PROJECTDIR  =  $(abspath ..)
 BUILDDIR    =  $(abspath ../build)
+DOWNLOADDIR ?= $(BUILDDIR)/download
 MBUILDDIR   =  $(BUILDDIR)/$(MACHINE_PREFIX)
 STAMPDIR    =  $(MBUILDDIR)/stamp
 SYSROOTDIR  =  $(MBUILDDIR)/sysroot
@@ -155,7 +156,7 @@ IMAGEDIR    =  $(BUILDDIR)/images
 TESTDIR     =  $(PROJECTDIR)/test
 
 TREEDIRS     += $(BUILDDIR) $(STAMPDIR) $(SYSROOTDIR) \
-		$(IMAGEDIR) $(INITRAMFSDIR)
+		$(IMAGEDIR) $(INITRAMFSDIR) $(DOWNLOADDIR)
 
 TREE_STAMP  = $(STAMPDIR)/tree
 tree-stamp: $(TREE_STAMP)
@@ -237,9 +238,12 @@ include make/docs.make
 # top level targets
 #
 
-PHONY += all source demo clean clean-all docs
+PHONY += all source demo clean clean-all download download-clean docs
 
 source: $(SOURCE)
+	$(Q) echo "=== Finished making $@ ==="
+
+download: $(DOWNLOAD)
 	$(Q) echo "=== Finished making $@ ==="
 
 all: $(KERNEL) $(UBOOT) $(SYSROOT) $(IMAGE)
@@ -255,7 +259,11 @@ clean: 	$(CLEAN)
 	$(Q) sudo rm -rf $(MBUILDDIR)
 	$(Q) echo "=== Finished making $@ for $(PLATFORM) ==="
 
-clean-all:
+download-clean: $(DOWNLOAD_CLEAN)
+	$(Q) rm -rf $(DOWNLOADDIR)/*
+	$(Q) echo "=== Finished making $@ ==="
+
+clean-all: clean download-clean
 	$(Q) sudo rm -rf $(BUILDDIR)/*
 	$(Q) echo "=== Finished making $@ ==="
 
