--- a/build-config/local.make.example
+++ b/build-config/local.make.example
@@ -20,19 +20,15 @@
 # Set the default version string
 # LSB_RELEASE_TAG = 2014.02
 
-# Set the base URLs for the downloaded packages.  You could change these to
-# setup a local mirror.
+# Set the base URLs for the downloaded packages.  You could change
+# this to setup a local mirror.  The individual makefile fragments set
+# these variables using "+= $(ONIE_MIRROR) <default project URL>",
+# appending the default URL to the end.
 #
-# LINUX_TARBALL_URLS = https://www.kernel.org/pub/linux/kernel/v3.x
-# UBOOT_TARBALL_URLS = ftp://ftp.denx.de/pub/u-boot
-# UCLIBC_TARBALL_URLS = http://www.uclibc.org/downloads
-# BUSYBOX_TARBALL_URLS = http://www.busybox.net/downloads
-# ZLIB_TARBALL_URLS = http://zlib.net \
-# LZO_TARBALL_URLS = http://www.oberhumer.com/opensource/lzo/download
-# E2FSPROGS_TARBALL_URLS = https://www.kernel.org/pub/linux/kernel/people/tytso/e2fsprogs/v1.42.8
-# MTDUTILS_TARBALL_URLS = http://ftp.de.debian.org/debian/pool/main/m/mtd-utils
-# DROPBEAR_TARBALL_URLS = https://matt.ucc.asn.au/dropbear/releases
+# ONIE_MIRROR = http://some-local-sever/onie/mirror
 
+# Set the mirror used to download the packages for crosstool-NG
+# CROSSTOOL_ONIE_MIRROR = http://some-local-sever/onie/mirror/crosstool-NG
 
 #-------------------------------------------------------------------------------
 #
