--- a/build-config/conf/uclibc.powerpc-softfloat.config
+++ b/build-config/conf/uclibc.powerpc-softfloat.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # Version: 0.9.32.1
-# Tue Jul 23 21:03:49 2013
+# Tue Nov 26 10:29:49 2013
 #
 # TARGET_alpha is not set
 # TARGET_arm is not set
@@ -35,9 +35,9 @@ TARGET_powerpc=y
 #
 TARGET_ARCH="powerpc"
 FORCE_OPTIONS_FOR_ARCH=y
-# CONFIG_CLASSIC is not set
-CONFIG_E500=y
-TARGET_SUBARCH="e500"
+CONFIG_CLASSIC=y
+# CONFIG_E500 is not set
+TARGET_SUBARCH="classic"
 
 #
 # Using ELF file format
@@ -50,10 +50,12 @@ ARCH_BIG_ENDIAN=y
 ARCH_HAS_MMU=y
 ARCH_USE_MMU=y
 UCLIBC_HAS_FLOATS=y
-UCLIBC_HAS_FPU=y
-# DO_C99_MATH is not set
+# UCLIBC_HAS_FPU is not set
+UCLIBC_HAS_SOFT_FLOAT=y
+DO_C99_MATH=y
 # DO_XSI_MATH is not set
-# UCLIBC_HAS_FENV is not set
+UCLIBC_HAS_FENV=y
+UCLIBC_HAS_LONG_DOUBLE_MATH=y
 KERNEL_HEADERS="/usr/include"
 HAVE_DOT_CONFIG=y
 
@@ -81,7 +83,7 @@ LDSO_GNU_HASH_SUPPORT=y
 UCLIBC_HAS_THREADS_NATIVE=y
 UCLIBC_HAS_THREADS=y
 UCLIBC_HAS_TLS=y
-# PTHREADS_DEBUG_SUPPORT is not set
+PTHREADS_DEBUG_SUPPORT=y
 UCLIBC_HAS_SYSLOG=y
 UCLIBC_HAS_LFS=y
 # MALLOC is not set
@@ -156,11 +158,10 @@ UCLIBC_HAS_CTYPE_SIGNED=y
 UCLIBC_HAS_CTYPE_UNSAFE=y
 # UCLIBC_HAS_CTYPE_CHECKED is not set
 # UCLIBC_HAS_CTYPE_ENFORCED is not set
-# UCLIBC_HAS_WCHAR is not set
+UCLIBC_HAS_WCHAR=y
 # UCLIBC_HAS_LOCALE is not set
 # UCLIBC_HAS_HEXADECIMAL_FLOATS is not set
 # UCLIBC_HAS_GLIBC_CUSTOM_PRINTF is not set
-# USE_OLD_VFPRINTF is not set
 UCLIBC_PRINTF_SCANF_POSITIONAL_ARGS=9
 # UCLIBC_HAS_SCANF_GLIBC_A_FLAG is not set
 # UCLIBC_HAS_STDIO_BUFSIZ_NONE is not set
@@ -229,7 +230,7 @@ UCLIBC_BUILD_NOEXECSTACK=y
 CROSS_COMPILER_PREFIX=""
 UCLIBC_EXTRA_CFLAGS=""
 # DODEBUG is not set
-DOSTRIP=y
+# DOSTRIP is not set
 # DOASSERTS is not set
 # SUPPORT_LD_DEBUG is not set
 # SUPPORT_LD_DEBUG_EARLY is not set
