powerpc-crosstool: build standalone companion tools
Instead of relying on the build host to have up-to-date versions of
various build tools, just build them locally.

- make
- m4
- autoconf
- automake
- libtool

--- a/build-config/conf/crosstool.powerpc-softfloat.config
+++ b/build-config/conf/crosstool.powerpc-softfloat.config
@@ -583,7 +583,12 @@ CT_LIBELF_VERSION="0.8.13"
 #
 # READ HELP before you say 'Y' below !!!
 #
-# CT_COMP_TOOLS is not set
+CT_COMP_TOOLS=y
+CT_COMP_TOOLS_make=y
+CT_COMP_TOOLS_m4=y
+CT_COMP_TOOLS_autoconf=y
+CT_COMP_TOOLS_automake=y
+CT_COMP_TOOLS_libtool=y
 
 #
 # Test suite
