x86_64-crosstool: build standalone companion tools
Instead of relying on the build host to have up-to-date versions of
various build tools, just build them locally.

- make
- m4
- autoconf
- automake
- libtool

--- a/build-config/conf/crosstool.x86_64.config
+++ b/build-config/conf/crosstool.x86_64.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # crosstool-NG 1.19.0 Configuration
-# Fri Dec  6 09:20:35 2013
+# Mon Dec 30 16:03:15 2013
 #
 CT_CONFIGURE_has_xz=y
 CT_CONFIGURE_has_cvs=y
@@ -106,8 +106,6 @@ CT_ARCH_TUNE=""
 # CT_ARCH_32 is not set
 CT_ARCH_64=y
 CT_ARCH_BITNESS=64
-# CT_ARCH_FLOAT_HW is not set
-# CT_ARCH_FLOAT_SW is not set
 CT_TARGET_CFLAGS=""
 CT_TARGET_LDFLAGS=""
 # CT_ARCH_alpha is not set
@@ -146,8 +144,6 @@ CT_ARCH_USE_MMU=y
 # Target optimisations
 #
 CT_ARCH_FLOAT=""
-# CT_ARCH_powerpc_ABI_DEFAULT is not set
-# CT_ARCH_powerpc_ABI_SPE is not set
 
 #
 # Toolchain options
@@ -581,7 +577,12 @@ CT_LIBELF_VERSION="0.8.13"
 #
 # READ HELP before you say 'Y' below !!!
 #
-# CT_COMP_TOOLS is not set
+CT_COMP_TOOLS=y
+CT_COMP_TOOLS_make=y
+CT_COMP_TOOLS_m4=y
+CT_COMP_TOOLS_autoconf=y
+CT_COMP_TOOLS_automake=y
+CT_COMP_TOOLS_libtool=y
 
 #
 # Test suite
