Changes to support multiple architectures platforms
Split out architecture dependent init scripts into into their own
directory.

When constructiong the SYSROOT filesystem do this:

1. copy files from rootconf/default/....
2. copy files from rootconf/$(ONIE_ARCH)/...

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -120,7 +120,7 @@ $(PROJECT_STAMP):
 #
 #  Target machine -- Usually specified on command line
 #
-MACHINE  ?= fsl_p2020rdbpca
+MACHINE  ?= kvm_x86_64
 MACHINE_PREFIX = $(MACHINE)-r$(MACHINE_REV)
 
 MACHINEROOT ?= $(realpath ../machine)
