Initial x86_64 CPU Support
Updated build system to compile for x86_64 targets.

Many changes here to make the build system more flexible and able to
support multiple CPU architectures.

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -48,6 +48,9 @@
 # Don't move this, it must be in FRONT of any included makefiles
 THIS_MAKEFILE = $(realpath $(firstword $(MAKEFILE_LIST)))
 
+# Allow users to override any ?= variables early
+-include local.make
+
 #-------------------------------------------------------------------------------
 #
 # Setup
@@ -213,8 +216,6 @@ endif
 #
 # target make fragments
 #
-
--include local.make
 
 # Default mirror for packages needed by ONIE
 ONIE_MIRROR	?= http://dev.cumulusnetworks.com/~curt/mirror/onie
