gptfdisk: add GPT partition CLI utility
Add the gdisk and sgdisk command line utilities to the ONIE build.
These utilities also require the popt library.

This patch adds:
- upstream gptfdisk and popt tarballs
- patches to gptfdisk and popt
- ONIE build system makefiles for gptfdisk and popt

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -236,6 +236,10 @@ include make/lzo.make
 include make/e2fsprogs.make
 include make/mtdutils.make
 include make/dropbear.make
+ifeq ($(GPT_ENABLE),yes)
+  include make/popt.make
+  include make/gptfdisk.make
+endif
 include make/images.make
 include make/demo.make
 include make/docs.make
