Use fakeroot instead of sudo
On the build host, instead of installing the packages using 'sudo',
create the final initrd using a 'fakeroot' environment.  This avoids
the use of sudo and running things as root on the build host.

This patch updates the various package Makefiles to remove the use of
'sudo'.  The patch also adds helper script, make-sysroot.sh, which
creates the final initrd using a fakeroot environment.

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -269,8 +269,8 @@ userspace-clean: $(USERSPACE_CLEAN)
 	$(Q) echo "=== Finished making $@ ==="
 
 clean: 	$(CLEAN) $(USERSPACE_CLEAN)
-	$(Q) sudo rm -rf $(BUILDDIR)/images/*$(MACHINE_PREFIX)*
-	$(Q) sudo rm -rf $(MBUILDDIR)
+	$(Q) rm -rf $(BUILDDIR)/images/*$(MACHINE_PREFIX)*
+	$(Q) rm -rf $(MBUILDDIR)
 	$(Q) echo "=== Finished making $@ for $(PLATFORM) ==="
 
 download-clean: $(DOWNLOAD_CLEAN)
@@ -281,7 +281,7 @@ distclean: download-clean $(DIST_CLEAN)
 	$(Q) for d in $(BUILDDIR)/* ; do \
 		[ -e "$$d" ] || break ; \
 		echo -n "=== Cleaning $$(basename $$d) ... " ; \
-		sudo rm -rf $$d ; \
+		rm -rf $$d ; \
 		echo " done ===" ; done
 	$(Q) rm -f $(PROJECT_STAMP)
 	$(Q) echo "=== Finished making $@ ==="
