--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "submodules/loader"]
 	path = submodules/loader
-	url = git@github.com:bigswitch/onl-loader
+	url = git@github.com:opennetworklinux/loader
 [submodule "submodules/linux-3.9.6"]
 	path = submodules/linux-3.9.6
 	url = git@github.com:opennetworklinux/linux-3.9.6
@@ -9,4 +9,4 @@
 	url = git@github.com:floodlight/infra
 [submodule "submodules/common"]
 	path = submodules/common
-	url = git@github.com:bigswitch/onl-common
+	url = git@github.com:opennetworklinux/common
