--- a/machine/kvm_x86_64/installer.conf
+++ b/machine/kvm_x86_64/installer.conf
@@ -3,7 +3,13 @@
 description="KVM, VM-X86_64"
 
 # Default ONIE block device
-onie_dev=/dev/vda
+install_device_platform()
+{
+    # For the VM demo just hard code the path.  For a real hardware
+    # system a more involved disk discovery and probe approach is
+    # recommended.
+    echo /dev/vda
+}
 
 # Local Variables:
 # mode: shell-script
