Makefile: update list of dev host packages
Update the list of Debian packages needed by the build host to compile
ONIE.

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -299,7 +299,7 @@ machine-prefix:
 
 # Install required build packages for a debian based build host
 DEBIAN_BUILD_HOST_PACKAGES	= build-essential stgit u-boot-tools python-sphinx rst2pdf \
-				  gperf
+				  gperf device-tree-compiler python-all-dev
 PHONY += debian-prepare-build-host
 debian-prepare-build-host:
 	$(Q) sudo apt-get update
