--- a/components/all/vendor-config/onl/deb/debuild/debian/control
+++ b/components/all/vendor-config/onl/deb/debuild/debian/control
@@ -1,11 +1,11 @@
-Source: vendor-config-xonl
+Source: vendor-config-onl
 Section: misc
 Priority: optional
 Maintainer: Support <support@bigswitch.com>
 Build-Depends: debhelper (>= 9)
 Standards-Version: 3.8.4
 
-Package: vendor-config-xonl
+Package: vendor-config-onl
 Architecture: all
 Depends: 
 Description: Vendor Configuration files for Open Network Linux.
