--- a/components/powerpc/linux/kernel-85xx/Makefile.comp
+++ b/components/powerpc/linux/kernel-85xx/Makefile.comp
@@ -1,22 +1,22 @@
 # -*- Makefile -*-
 ############################################################
 # <bsn.cl fy=2013 v=onl>
-# 
-#        Copyright 2013, 2014 BigSwitch Networks, Inc.        
-# 
+#
+#        Copyright 2013, 2014 BigSwitch Networks, Inc.
+#
 # Licensed under the Eclipse Public License, Version 1.0 (the
 # "License"); you may not use this file except in compliance
 # with the License. You may obtain a copy of the License at
-# 
+#
 #        http://www.eclipse.org/legal/epl-v10.html
-# 
+#
 # Unless required by applicable law or agreed to in writing,
 # software distributed under the License is distributed on an
 # "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
 # either express or implied. See the License for the specific
 # language governing permissions and limitations under the
 # License.
-# 
+#
 # </bsn.cl>
 ############################################################
 #
@@ -57,7 +57,7 @@ $(BUILD_POWERPC_LINUX_85XX)/linux-85xx-headers/.done: $(ONL_SUBMODULE_LINUX_3_9_
 $(BUILD_POWERPC_LINUX_85XX)/linux-85xx-headers: $(BUILD_POWERPC_LINUX_85XX)/linux-85xx-headers/.done
 
 # These are the dtb files built for this kernel configuration:
-DTS_LIST := powerpc-quanta-lb9-r0 powerpc-quanta-lb9a-r0 powerpc-quanta-ly2-r0 
+DTS_LIST := powerpc-quanta-lb9-r0 powerpc-quanta-lb9a-r0 powerpc-quanta-ly2-r0 powerpc-as5610-52x
 DTB_LIST := $(foreach dts,$(DTS_LIST),$(BUILD_POWERPC_LINUX_85XX)/linux-85xx-dtbs/$(dts).dtb)
 
 $(BUILD_POWERPC_LINUX_85XX)/linux-85xx-dtbs/%.dtb: $(ONL_SUBMODULE_LINUX_3_9_6)/arch/powerpc/boot/dts/%.dts kernel-85xx | $(shell mkdir -p $(BUILD_POWERPC_LINUX_85XX)/linux-85xx-dtbs)
