--- a/components/powerpc/linux/kernel-85xx/Makefile.comp
+++ b/components/powerpc/linux/kernel-85xx/Makefile.comp
@@ -57,7 +57,9 @@ $(BUILD_POWERPC_LINUX_85XX)/linux-85xx-headers/.done: $(ONL_SUBMODULE_LINUX_3_9_
 $(BUILD_POWERPC_LINUX_85XX)/linux-85xx-headers: $(BUILD_POWERPC_LINUX_85XX)/linux-85xx-headers/.done
 
 # These are the dtb files built for this kernel configuration:
-DTS_LIST := powerpc-quanta-lb9-r0 powerpc-quanta-lb9a-r0 powerpc-quanta-ly2-r0 powerpc-as5610-52x
+DTS_LIST := powerpc-quanta-lb9-r0 powerpc-quanta-lb9a-r0 powerpc-quanta-ly2-r0 \
+	    powerpc-as5610-52x powerpc-as5600-52x
+
 DTB_LIST := $(foreach dts,$(DTS_LIST),$(BUILD_POWERPC_LINUX_85XX)/linux-85xx-dtbs/$(dts).dtb)
 
 $(BUILD_POWERPC_LINUX_85XX)/linux-85xx-dtbs/%.dtb: $(ONL_SUBMODULE_LINUX_3_9_6)/arch/powerpc/boot/dts/%.dts kernel-85xx | $(shell mkdir -p $(BUILD_POWERPC_LINUX_85XX)/linux-85xx-dtbs)
