--- a/components/powerpc/platform/powerpc-as5600-52x/Makefile.comp
+++ b/components/powerpc/platform/powerpc-as5600-52x/Makefile.comp
@@ -1,3 +1,4 @@
+# -*- Makefile -*-
 ############################################################
 # <bsn.cl fy=2013 v=onl>
 #
@@ -19,12 +20,23 @@
 # </bsn.cl>
 ############################################################
 #
-# These are the platforms to include in this installer build.
+# powerpc-as5600-52x
 #
 ############################################################
-INSTALLER_PLATFORMS :=  powerpc-quanta-lb9-r0 \
-			powerpc-quanta-ly2-r0 \
-			powerpc-as5610-52x \
-			powerpc-as5600-52x
+ifndef ONL
+$(error $$ONL is not set)
+else
+include $(ONL)/make/config.mk
+endif
 
+KERNEL.BIN.GZ := $(shell $(ONL_PKG_INSTALL) kernel-85xx:powerpc --find-file kernel-85xx.bin.gz)
+INITRD := $(shell $(ONL_PKG_INSTALL) initrd-powerpc:powerpc --find-file initrd-powerpc)
+DTB := $(shell $(ONL_PKG_INSTALL) kernel-85xx-dtbs:powerpc --find-file powerpc-as5600-52x.dtb)
+PLATFORM_NAME := powerpc-as5600-52x
 
+include $(ONL)/make/platform-ppc.mk
+
+.PHONY: deb
+
+deb:
+	$(MAKE) -C deb
