Adding support for sys-eeprom tool for x86_64 platforms
Ticket: ONIE-19
Reviewed By: curt, scotte
Testing Done: Tested on dell_s6000

Currently onie doesnt have a sys_eeprom tool. In powerpc based platforms, we
have U-boot from we can access the eeprom, and hence we could live without
this tool. But with x86, there is no u-boot, and eeprom access will now
have to be from ONIE.
Updates:
- Added support for Service Tag TLV
- Changed name from sys-eeprom to onie-syseeprom

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -29,6 +29,7 @@
 #   build
 #   ├── <platform>
 #   │   ├── busybox
+#   |   |-- i2ctools
 #   │   ├── initramfs
 #   │   ├── kernel
 #   │   ├── stamp
@@ -242,6 +243,9 @@ ifeq ($(GPT_ENABLE),yes)
 endif
 ifeq ($(GRUB_ENABLE),yes)
   include make/grub.make
+endif
+ifeq ($(I2CTOOLS_ENABLE),yes)
+  include make/i2ctools.make
 endif
 include make/images.make
 include make/demo.make
