x86_64: add dmidecode utility
Reviewed By: puneet, dustin

This patch adds the 'dmidecode' utility from the dmidecode project to
x86_64 platforms.

See:  http://www.nongnu.org/dmidecode/

Testing Done:

Built an image and loaded on a x86_64 based platform.  Exercised the
dmidecode command.  The output looks reasonable.

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -247,6 +247,9 @@ endif
 ifeq ($(I2CTOOLS_ENABLE),yes)
   include make/i2ctools.make
 endif
+ifeq ($(DMIDECODE_ENABLE),yes)
+  include make/dmidecode.make
+endif
 include make/images.make
 include make/demo.make
 include make/docs.make
