Add support for lvm2 and device-mapper
Reviewed By: puneet, dustin

This patch adds support for logical volume management, specifically
lvm2.  This cuts across a number of components:

GRUB -- adds support for loading the kernel and initrd from logical
        volumes.

Linux Kernel -- adds device mapper support, which lvm2 is built on top
                of.

user space -- adds lvm2 utilities for creating / managing logical
              volumes.

Testing Done:

1.  Boot into ONIE.
2.  Create a volume group on /dev/sda4
3.  Create a logical volume
4.  Create a ext4 file system on logical volume, with a label
5.  Mount logical volume
6.  copy ONIE kernel and initramfs to logical volume
7.  umount logical volume
8.  Reboot, stopping in grub
9.  From grub 'insmod lvm'
10. grub> ls  -- shows the logical volume
11. grub> search command finds partition by file system label
12. grub> load kernel and initramfs from volume
13. grub> boot -- boots in ONIE from logical volume

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -241,6 +241,9 @@ ifeq ($(GPT_ENABLE),yes)
   include make/popt.make
   include make/gptfdisk.make
 endif
+ifeq ($(LVM2_ENABLE),yes)
+  include make/lvm2.make
+endif
 ifeq ($(GRUB_ENABLE),yes)
   include make/grub.make
 endif
