--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "submodules/common"]
 	path = submodules/common
 	url = git://github.com/opennetworklinux/common
+[submodule "submodules/linux-3.8.13"]
+	path = submodules/linux-3.8.13
+	url = git@github.com:opennetworklinux/linux-3.8.13
