Add parted disk utility
Reviewed By: no one

Add the 'parted' disk partitioning utility to x86 builds.

Testing Done:

Used the parted command to create disk labels and to partition disks.

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -244,6 +244,9 @@ endif
 ifeq ($(LVM2_ENABLE),yes)
   include make/lvm2.make
 endif
+ifeq ($(PARTED_ENABLE),yes)
+  include make/parted.make
+endif
 ifeq ($(GRUB_ENABLE),yes)
   include make/grub.make
 endif
