Support gpt and msdos disk labels
Reviewed by: tbd

Each machine can choose whether to use GPT or MSDOS disk labels.  The
choice is made in the machine's machine.make file by setting
PARTITION_TYPE to "msdos" or "gpt".

You can also set PARTITION_TYPE=[gpt|msdos] on the command line to
force the type for a particular build.

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -157,6 +157,12 @@ endif
 
 PLATFORM  = $(ARCH)-$(MACHINE_PREFIX)
 
+# Verify partition type
+ifneq ($(filter-out gpt msdos, $(PARTITION_TYPE)),)
+  $(warning Unsupported partition type: $(PARTITION_TYPE))
+  $(error Supported partition types: gpt, msdos)
+endif
+
 TREE_STAMP  = $(STAMPDIR)/tree
 tree-stamp: $(TREE_STAMP)
 $(TREE_STAMP): $(PROJECT_STAMP)
