--- a/build-config/recovery/syslinux.cfg
+++ b/build-config/recovery/syslinux.cfg
@@ -1,4 +1,23 @@
+serial 0 115200
 
-default vmlinuz
-append initrd=initrd.xz console=tty0 console=ttyS0,115200n8 boot_env=recovery boot_reason=rescue
+# Wait 5 seconds unless the user types something, but
+# always boot after 15 minutes.
+timeout 50
+totaltimeout 9000
 
+console 0
+
+default menu.c32
+
+menu title ONIE Installer
+
+label rescue
+  menu label ONIE: Rescue
+  menu default
+  kernel vmlinuz
+  append initrd=initrd.xz console=tty0 console=ttyS0,115200n8 boot_env=recovery boot_reason=rescue
+
+label embed
+  menu label ONIE: Embed ONIE
+  kernel vmlinuz
+  append initrd=initrd.xz console=tty0 console=ttyS0,115200n8 boot_env=recovery boot_reason=embed install_url=file:///lib/onie/onie-updater
