ONIE x86: major disk partitioning changes
Reviewed by: TBD

This patch implements a more flexible disk partitioning design for x86
systems.  The fundamental changes are:

- Use a single partition for kernel+initramfs and GRUB configuration.
  This partition has the label "ONIE-BOOT".  The "ONIE-CONFIG"
  partition is removed.

- ONIE update now comes in two flavors: update and embed.  'update'
  only updates files in the ONIE-BOOT partition and does not affect
  the partition table or MBR. 'embed' will wipe the disk clean and
  install a new partition table, along with installing GRUB in the MBR
  and installing ONIE.

- To get back to ONIE a NOS now 'chainloads' the ONIE partition.

- replace most onie-boot-XXX tools with a single, simpler
  onie-boot-mode command.

With this patch the ONIE partition is more self-contained and the
installed NOS controls how it manages the MBR and GRUB.

The below examples use GPT as the disk label.  The mechanics for MSDOS
disk labels are nearly the same, the only difference being GPT needs
to create the "BIOS GRUB" partition which MSDOS does not.

Single Partition and Initial Install (embed)
============================================

First let's start with what the hard disk looks like just after ONIE
is installed in the factory.

Before this assume the disk was blank and PXE (or a USB stick) was
used to install ONIE for the first time.

For sake of example assume the hard disk is available as /dev/sda.

+=======================+
|  /dev/sda  MBR        |
|                       |
|  ONIE Installs GRUB   |
+=======================+
|  /dev/sda1 GRUB       |
|                       |
|  BIOS GRUB            |
+=======================+
|  /dev/sda2 ONIE-BOOT  |
|                       |
|  ONIE Installs GRUB   |
+=======================+
|                       |
/  Free Space           /
|                       |
+=======================+

The ramdisk (or netboot or USB stick) boot of ONIE does the following:

- Since the disk i

--- a/build-config/recovery/grub-pxe.cfg
+++ b/build-config/recovery/grub-pxe.cfg
@@ -20,10 +20,10 @@ menuentry "ONIE: Rescue" --class gnu-linux --class onie {
   onie_entry_end
 }
 
-menuentry "ONIE: Install ONIE" --class gnu-linux --class onie {
-  echo    "ONIE: Installing ONIE ..."
+menuentry "ONIE: Embed ONIE" --class gnu-linux --class onie {
+  echo    "ONIE: Embedding ONIE ..."
   acpi
-  linux   /vmlinuz $ONIE_CMDLINE_LINUX boot_reason=install install_url=file:///lib/onie/onie-updater
+  linux   /vmlinuz $ONIE_CMDLINE_LINUX boot_reason=embed install_url=file:///lib/onie/onie-updater
   initrd  /initrd.xz
   onie_entry_end
 }
