--- a/installer/x86_64/grub/grub-common.cfg
+++ b/installer/x86_64/grub/grub-common.cfg
@@ -1,13 +1,9 @@
 ## Begin grub-common.cfg
 
-serial --speed=115200 --unit=0 --word=8 --parity=no --stop=1
-terminal_input serial
-terminal_output serial
 set timeout=5
 
-CMDLINE_LINUX_SERIAL="console=ttyS0,115200n8"
-
 onie_submenu="ONIE (Version: $onie_version)"
+
 onie_menu_install="ONIE: Install OS"
 export onie_menu_install
 onie_menu_rescue="ONIE: Rescue"
@@ -16,7 +12,50 @@ onie_menu_uninstall="ONIE: Uninstall OS"
 export onie_menu_uninstall
 onie_menu_update="ONIE: Update ONIE"
 export onie_menu_update
+onie_menu_embed="ONIE: Embed ONIE"
+export onie_menu_embed
 
-set default="${onie_submenu}>${onie_menu_install}"
+set fallback="${onie_menu_rescue}"
+
+function onie_entry_start {
+  insmod gzio
+  insmod ext2
+  if [ "$onie_partition_type" = "gpt" ] ; then
+    insmod part_gpt
+    set root='(hd0,gpt2)'
+  else
+    insmod part_msdos
+    set root='(hd0,msdos1)'
+  fi
+  search --no-floppy --label --set=root ONIE-BOOT
+}
+
+function onie_entry_end {
+  echo "Version   : $onie_version"
+  echo "Build Date: $onie_build_date"
+}
+
+function reset_onie_mode {
+   set onie_mode="none"
+   save_env onie_mode
+}
+
+# Load environment variables
+load_env
+if [ "$onie_mode" = "install" ] ; then
+   set default="${onie_menu_install}"
+elif [ "$onie_mode" = "uninstall" ] ; then
+   set default="${onie_menu_uninstall}"
+   # clear uninstall mode after one boot attempt
+   reset_onie_mode
+elif [ "$onie_mode" = "update" ] ; then
+   set default="${onie_menu_update}"
+elif [ "$onie_mode" = "embed" ] ; then
+   set default="${onie_menu_embed}"
+elif [ "$onie_mode" = "rescue" ] ; then
+   set default="${onie_menu_rescue}"
+   # clear rescue mode after one boot attempt
+   reset_onie_mode
+fi
 
 ## End grub-common.cfg
