Update the list of installed packages for building ONIE
The debian-prepare-build-host Makefile target can be used to download
and install the necessary development packges for apt-get based Linux
distributions.

This patches adds additional packages to the
DEBIAN_BUILD_HOST_PACKAGES variable in the main Makefile.

Testing Done:

Built ONIE using a new Ubuntu 14.04 system.  Previously, without this
patch the build would fail for missing development host packages.

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -318,7 +318,10 @@ machine-prefix:
 
 # Install required build packages for a debian based build host
 DEBIAN_BUILD_HOST_PACKAGES	= build-essential stgit u-boot-tools python-sphinx rst2pdf \
-				  gperf device-tree-compiler python-all-dev genisoimage syslinux-common
+				  gperf device-tree-compiler python-all-dev genisoimage \
+				  syslinux-common autoconf automake bison flex texinfo libtool \
+				  lib32ncurses5-dev
+
 PHONY += debian-prepare-build-host
 debian-prepare-build-host:
 	$(Q) sudo apt-get update
