--- a/build-config/conf/crosstool.powerpc-softfloat.config
+++ b/build-config/conf/crosstool.powerpc-softfloat.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # crosstool-NG 1.19.0 Configuration
-# Wed Dec  4 16:20:18 2013
+# Fri May  2 13:31:32 2014
 #
 CT_CONFIGURE_has_xz=y
 CT_CONFIGURE_has_cvs=y
@@ -86,7 +86,7 @@ CT_LOG_INFO=y
 # CT_LOG_DEBUG is not set
 CT_LOG_LEVEL_MAX="INFO"
 # CT_LOG_SEE_TOOLS_WARN is not set
-CT_LOG_PROGRESS_BAR=y
+# CT_LOG_PROGRESS_BAR is not set
 CT_LOG_TO_FILE=y
 CT_LOG_FILE_COMPRESS=y
 
@@ -291,14 +291,14 @@ CT_BINUTILS_FOR_TARGET_BFD=y
 # C compiler
 #
 CT_CC="gcc"
-CT_CC_VERSION="4.7.2"
+CT_CC_VERSION="4.7.3"
 CT_CC_CORE_PASSES_NEEDED=y
 CT_CC_gcc=y
 # CT_CC_GCC_SHOW_LINARO is not set
 # CT_CC_V_4_8_1 is not set
 # CT_CC_V_4_8_0 is not set
-# CT_CC_V_4_7_3 is not set
-CT_CC_V_4_7_2=y
+CT_CC_V_4_7_3=y
+# CT_CC_V_4_7_2 is not set
 # CT_CC_V_4_7_1 is not set
 # CT_CC_V_4_7_0 is not set
 # CT_CC_V_4_6_4 is not set
@@ -461,7 +461,6 @@ CT_LIBC_UCLIBC_WCHAR=y
 # Debug facilities
 #
 # CT_DEBUG_dmalloc is not set
-# CT_DMALLOC_V_5_5_2 is not set
 CT_DEBUG_duma=y
 CT_DUMA_A=y
 CT_DUMA_SO=y
