xtools-x86_64: move to gcc 4.7.3
Reviewed By: dustin

For the x86_64 cross-compiling toolchain move to gcc version 4.7.3.

This change is to avoid xtool compilation issues reported by several
users.  Particularly users of Ubuntu 14.04 where the host compiler
is:

  gcc version 4.8.2 (Ubuntu 4.8.2-19ubuntu1)

See the gcc mailing list comments for more information:

  http://gcc.gnu.org/bugzilla/show_bug.cgi?id=57625

Testing Done:

Compile images using Ubuntu 14.04 and installed ONIE on the kvm_x86_64
reference platform and two additional x86 based platforms without
problems.  Ran through the demo OS installer also.

Signed-off-by: Curt Brune <curt@cumulusnetworks.com>

--- a/build-config/conf/crosstool.x86_64.config
+++ b/build-config/conf/crosstool.x86_64.config
@@ -1,7 +1,7 @@
 #
 # Automatically generated make config: don't edit
 # crosstool-NG 1.19.0 Configuration
-# Mon Dec 30 16:03:15 2013
+# Fri May  2 13:30:04 2014
 #
 CT_CONFIGURE_has_xz=y
 CT_CONFIGURE_has_cvs=y
@@ -86,7 +86,7 @@ CT_LOG_INFO=y
 # CT_LOG_DEBUG is not set
 CT_LOG_LEVEL_MAX="INFO"
 # CT_LOG_SEE_TOOLS_WARN is not set
-CT_LOG_PROGRESS_BAR=y
+# CT_LOG_PROGRESS_BAR is not set
 CT_LOG_TO_FILE=y
 CT_LOG_FILE_COMPRESS=y
 
@@ -286,14 +286,14 @@ CT_BINUTILS_FOR_TARGET_BFD=y
 # C compiler
 #
 CT_CC="gcc"
-CT_CC_VERSION="4.7.2"
+CT_CC_VERSION="4.7.3"
 CT_CC_CORE_PASSES_NEEDED=y
 CT_CC_gcc=y
 # CT_CC_GCC_SHOW_LINARO is not set
 # CT_CC_V_4_8_1 is not set
 # CT_CC_V_4_8_0 is not set
-# CT_CC_V_4_7_3 is not set
-CT_CC_V_4_7_2=y
+CT_CC_V_4_7_3=y
+# CT_CC_V_4_7_2 is not set
 # CT_CC_V_4_7_1 is not set
 # CT_CC_V_4_7_0 is not set
 # CT_CC_V_4_6_4 is not set
