x86: add ethtool utility
Reviewed By: dustin

Add Makefile and configuration options for supporting the ethtool
utility.

By default on x86 platforms the build will include the ethtool
utility.

An individual machine.make can set "ETHTOOL_ENABLE = no" to not
include the ethtool utility in the build.

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -262,6 +262,9 @@ endif
 ifeq ($(DMIDECODE_ENABLE),yes)
   include make/dmidecode.make
 endif
+ifeq ($(ETHTOOL_ENABLE),yes)
+  include make/ethtool.make
+endif
 include make/images.make
 include make/demo.make
 include make/docs.make
