--- a/build-config/recovery/grub-pxe.cfg
+++ b/build-config/recovery/grub-pxe.cfg
@@ -1,5 +1,5 @@
 
-serial --speed=115200 --unit=0 --word=8 --parity=no --stop=1
+serial --port=0x3f8 --speed=115200 --word=8 --parity=no --stop=1
 terminal_input serial
 terminal_output serial
 set timeout=3
