--- a/components/powerpc/linux/kernel-e500mc/Makefile.comp
+++ b/components/powerpc/linux/kernel-e500mc/Makefile.comp
@@ -1,22 +1,22 @@
 # -*- Makefile -*-
 ############################################################
 # <bsn.cl fy=2013 v=onl>
-# 
-#        Copyright 2013, 2014 Big Switch Networks, Inc.       
-# 
+#
+#        Copyright 2013, 2014 Big Switch Networks, Inc.
+#
 # Licensed under the Eclipse Public License, Version 1.0 (the
 # "License"); you may not use this file except in compliance
 # with the License. You may obtain a copy of the License at
-# 
+#
 #        http://www.eclipse.org/legal/epl-v10.html
-# 
+#
 # Unless required by applicable law or agreed to in writing,
 # software distributed under the License is distributed on an
 # "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND,
 # either express or implied. See the License for the specific
 # language governing permissions and limitations under the
 # License.
-# 
+#
 # </bsn.cl>
 ############################################################
 #
@@ -57,7 +57,7 @@ $(COMPDIR)/linux-e500mc-headers: $(COMPDIR)/linux-e500mc-headers/.done
 
 
 # These are the dtb files built for this kernel configuration:
-DTS_LIST := powerpc-as6700-32x-r0 powerpc-as5710-54x-r0a
+DTS_LIST := powerpc-as6700-32x-r0 powerpc-as5710-54x-r0a powerpc-as6700-32x-r0b powerpc-as5710-54x-r0b
 DTB_LIST := $(foreach dts,$(DTS_LIST),$(COMPDIR)/linux-e500mc-dtbs/$(dts).dtb)
 
 $(COMPDIR)/linux-e500mc-dtbs/%.dtb: $(ONL_SUBMODULE_LINUX_3_8_13)/arch/powerpc/boot/dts/%.dts kernel-e500mc | $(shell mkdir -p $(COMPDIR)/linux-e500mc-dtbs)
