Changed git URL from private to anonymous

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,4 +12,4 @@
 	url = git://github.com/opennetworklinux/common
 [submodule "submodules/linux-3.8.13"]
 	path = submodules/linux-3.8.13
-	url = git@github.com:opennetworklinux/linux-3.8.13
+	url = git://github.com/opennetworklinux/linux-3.8.13
