Add the Open Network Linux Platform repository as a submodule.

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "submodules/linux-3.8.13"]
 	path = submodules/linux-3.8.13
 	url = git://github.com/opennetworklinux/linux-3.8.13
+[submodule "submodules/onlp"]
+	path = submodules/onlp
+	url = git://github.com/opennetworklinux/ONLP
