Ensure realpath and gawk are installed
realpath is required for patching linux and gawk is required for the build

--- a/build-config/Makefile
+++ b/build-config/Makefile
@@ -323,7 +323,7 @@ machine-prefix:
 DEBIAN_BUILD_HOST_PACKAGES	= build-essential stgit u-boot-tools python-sphinx rst2pdf \
 				  gperf device-tree-compiler python-all-dev genisoimage \
 				  syslinux-common autoconf automake bison flex texinfo libtool \
-				  lib32ncurses5-dev
+				  lib32ncurses5-dev realpath gawk
 
 PHONY += debian-prepare-build-host
 debian-prepare-build-host:
