Added initial support for the Open Route Cache (ORC) router

--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule "submodules/onlp"]
 	path = submodules/onlp
 	url = git://github.com/opennetworklinux/ONLP
+[submodule "submodules/bigcode"]
+	path = submodules/bigcode
+	url = git://github.com/floodlight/bigcode
