--- a/machine/kvm_x86_64/installer.conf
+++ b/machine/kvm_x86_64/installer.conf
@@ -15,3 +15,38 @@ install_device_platform()
 # mode: shell-script
 # eval: (sh-set-shell "/bin/sh" t nil)
 # End:
+
+#
+# Sample usage for pre/post install hooks 
+#
+pre_install()
+{
+    echo "Pre installation hook"
+
+    # 
+    # Add any platform specific hooks here
+    # before onie installation starts. 
+    #
+    # For example, maybe reset HW watchdog so
+    # the system won't reboot while onie
+    # installation is underway.
+    #
+}
+
+post_install()
+{
+    echo "Post installation hook"
+
+    #
+    # Add platform specific hooks here.
+    #
+    # For example, set BIOS to directly
+    # boot from hard drive as onie is
+    # already installed.
+    #
+}
+
+# Set install callback hooks
+pre_install_hook=pre_install
+post_install_hook=post_install
+
