Add check for return code for pre and post install hooks.
Testing Done:

Tested on x86_64 platforms.

Signed-off-by: Curt Brune <curt@cumulusnetworks.com>

--- a/machine/kvm_x86_64/installer.conf
+++ b/machine/kvm_x86_64/installer.conf
@@ -31,6 +31,8 @@ pre_install()
     # the system won't reboot while onie
     # installation is underway.
     #
+
+    return 0
 }
 
 post_install()
@@ -44,6 +46,8 @@ post_install()
     # boot from hard drive as onie is
     # already installed.
     #
+    
+    return 0
 }
 
 # Set install callback hooks
