Remove hardcode of console unit and console speed
This patch allows setting console unit number and console-speed
at image build time. if CONSOLE_UNIT and CONSOLE_SPEED is not
defined, default is 0 and 115200.

This can be set as part of the make command (i.e,
make MACHINE=kvm_x86_64 CONSOLE_SPEED=9600 CONSOLE_UNIT=0 all),
or define in the machine.make file such as,

$ cat machine/kvm_x86_64/machine.make
CONSOLE_SPEED = 9600
CONSOLE_UNIT = 0

Signed-off-by: Curt Brune <curt@cumulusnetworks.com>

--- a/build-config/recovery/syslinux.cfg
+++ b/build-config/recovery/syslinux.cfg
@@ -1,4 +1,4 @@
-serial 0 115200
+serial <CONSOLE_UNIT> <CONSOLE_SPEED>
 
 # Wait 5 seconds unless the user types something, but
 # always boot after 15 minutes.
@@ -15,9 +15,9 @@ label rescue
   menu label ONIE: Rescue
   menu default
   kernel vmlinuz
-  append initrd=initrd.xz console=tty0 console=ttyS0,115200n8 boot_env=recovery boot_reason=rescue
+  append initrd=initrd.xz console=tty0 console=ttyS<CONSOLE_UNIT>,<CONSOLE_SPEED>n8 boot_env=recovery boot_reason=rescue
 
 label embed
   menu label ONIE: Embed ONIE
   kernel vmlinuz
-  append initrd=initrd.xz console=tty0 console=ttyS0,115200n8 boot_env=recovery boot_reason=embed install_url=file:///lib/onie/onie-updater
+  append initrd=initrd.xz console=tty0 console=ttyS<CONSOLE_UNIT>,<CONSOLE_SPEED>n8 boot_env=recovery boot_reason=embed install_url=file:///lib/onie/onie-updater
