--- a/build-config/recovery/grub-pxe.cfg
+++ b/build-config/recovery/grub-pxe.cfg
@@ -1,5 +1,5 @@
 
-serial --port=0x3f8 --speed=115200 --word=8 --parity=no --stop=1
+serial --port=0x3f8 --speed=<CONSOLE_SPEED> --word=8 --parity=no --stop=1
 terminal_input serial
 terminal_output serial
 set timeout=3
@@ -10,7 +10,7 @@ function onie_entry_end {
   echo "Build Date: $onie_build_date"
 }
 
-ONIE_CMDLINE_LINUX="quiet console=tty0 console=ttyS0,115200n8 boot_env=recovery"
+ONIE_CMDLINE_LINUX="quiet console=tty0 console=ttyS<CONSOLE_UNIT>,<CONSOLE_SPEED>n8 boot_env=recovery"
 
 menuentry "ONIE: Rescue" --class gnu-linux --class onie {
   echo    "ONIE: Rescue Mode ..."
